# sim

./: AGENTS.md
flight-replay/: README.md  config.yaml  pyproject.toml
flight-replay/src/: __init__.py  align.py  cli.py  config.py  log_extract.py  metrics.py  mission_extract.py  phases.py  report.py  sitl_runner.py  versioning.py
flight-replay/tests/: helpers.py  test_align.py  test_golden_regression.py  test_log_extract.py  test_metrics.py  test_phases_rejection.py  test_versioning.py
flight-replay/tests/fixtures/: golden_metrics.json  mission_fixture.json
